# x-clang-tidy

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs
.github/: dependabot.yaml
.github/workflows/: rust.yml
src/: main.rs
