[package]
name = "x-clang-tidy"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "6"
once_cell = "1.21"

[build-dependencies]
git-version = "0.3"

[profile.release]
lto = true
opt-level = "s"
strip = "debuginfo"